src/components/sections/Section.module.css
.card {
  margin: 0.5em 0.2em;
  flex: auto;
  display: flex;
  flex-direction: column;
}
.card > :global(.ant-card-body) {
  flex: auto;
}
.card > :global(.ant-card-actions) {
  flex-grow: 0;
}

.meta {
  margin-bottom: 1em;
}

.coverIcon {
  padding-top: 60%;
  position: relative;
}

.coverIcon > :global(span) {
  position: absolute;
  left: 10%;
  right: 10%;
  top: 10%;
  bottom: 10%;
}
.coverIcon :global(svg) {
  width: 100%;
  height: 100%;
  opacity: 0.2;
}

